2005-06-16 Alasdair Allan <aa@astro.ex.ac.uk>  (Version 4.0)

        * Query/Query/*.pm: All query classes updated. The package passes
	  all test, however many parts of the test suite do not have anything
	  like full coverage. I think we have to expect some bugs at this
	  stage.Theoretically fully working Astro::Catalog distribution
	  however, so lets badge this as V4.

2005-06-15 Alasdair Allan <aa@astro.ex.ac.uk>

        * Basic fixes to Catalog.pm and IO/Cluster.pm to support the new
	  changes. Hopefully this will provide a springboard so I can fix
	  the rest of the IO and Query modules. This is a big job...
	  
	* IO/*.pm: All IO classes working, I think?  

2005-06-12 Alasdair Allan <aa@astro.ex.ac.uk>

        * Series of changes breaking backwards compatibility in Item.pm to
	  support the new Astro::Fluxes objects and Number::Uncertainty for
	  magnitude and colour support. These changes break all other classes
	  in the package.

2005-06-04  Alasdair Allan <aa@astro.ex.ac.uk>

        * Removed Astro::Catalog::Star and Astro::Catalog::Star::Morphology
	  and replaces with corresponding Item classes. The Star classes are
	  retained as empty-subclasses for backwards compatibility.

2005-06-04  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.9.9)

        * Updated documentation and released as version 3.9.9
        
        * Quary/Query/Sesame.pm: Removed reference from Math::Libm

2005-06-04  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>
        
	* t/2_fitstable.t: Change magnitude test to use the log_10 of the 
	  flux.

        * t/4_mpc.t: Fix up MPC tests again

2005-06-03  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* IO/FITSTable.pm: Convert flux to magnitudes with log_10,
	  not natural logarithm.
	
2005-03-30  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* IO/ASCII.pm: base class for ASCII-based IO

	* IO/Binary.pm: base class for binary-based IO

	* Catalog.pm: added FITSTable support; modified IO class handling